--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+<link href="https://alefmends.github.io/calculator-dark/style.css" rel"stylesheet"/>
+    <script src="https://alefmends.github.io/calculator-dark/scripts.js"></script>
     <title>Calculadora Black</title>
 </head>
 
